<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".QuestionsActivity">
    <LinearLayout 
        android:id="@+id/text_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

      <TextView
         android:id="@+id/story_title"
         android:text="@string/story_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dip"
         android:textSize="16dip"
         android:textStyle="bold" >
      </TextView>
  </LinearLayout>
    <ListView
            android:id="@+id/questions_list_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">        

    </ListView>     
    <LinearLayout 
        android:id="@+id/submit_button_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

        <Button
        android:id="@+id/to_main_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_back"
          android:onClick="goToMain" />
        <Button
        android:id="@+id/to_result_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_next"
          android:onClick="goToResult" />  


    </LinearLayout>

</RelativeLayout>
